<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4sp"
        android:orientation="vertical"
        android:padding="4sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6sp"
            android:gravity="center"
            android:text="@string/mTitle"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:gravity="center"
            android:text="@string/mAuthor" />

        <Button
            android:id="@+id/newIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@android:color/holo_green_light"
            android:text="@string/activity_newIngredient" />


        <Button
            android:id="@+id/newRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/activity_newRecipe" />

        <Button
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/activity_ingredients" />

        <Button
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/activity_recipes" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>