<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="341dp"
    android:layout_height="match_parent"
    android:layout_margin="4sp"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="4sp">

    <TextView
        android:id="@+id/row_name_h"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:gravity="left|center"
        android:padding="2sp"
        android:text="@string/name_h"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/row_baseUnit_h"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:gravity="left|center"
        android:padding="2sp"
        android:text="@string/baseUnit_h"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/row_calories_h"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:gravity="left|center"
        android:padding="2sp"
        android:text="@string/calories_h"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/row_cost_h"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_weight="1"
        android:gravity="left|center"
        android:padding="2sp"
        android:text="@string/cost_h"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>
