<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:orientation="horizontal"
        android:padding="4sp">

        <TextView
            android:id="@+id/rec_ing_name_h"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:text="@string/r_ing_name_h"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rec_ing_amount_h"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="4sp"
            android:layout_marginTop="4sp"
            android:layout_weight="1"
            android:text="@string/r_ing_amount_h"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rec_ing_unit_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4sp"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="4sp"
            android:layout_marginTop="4sp"
            android:layout_weight="1"
            android:text="@string/r_ing_unit_h"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>